<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="1"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_menu_user"
                android:title="@string/profile" />

            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />

            <item
                android:id="@+id/requests"
                android:icon="@drawable/ic_message"
                android:title="@string/requests" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>