<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_toLeftOf="@+id/close"
        android:layout_alignParentStart="true"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/reset_password"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:padding="10dp" />

        <EditText
            android:id="@+id/codeInput"
            android:hint="@string/enter_the_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:padding="10dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/reset_password_message"
            android:textColor="@color/brown"
            android:textSize="16sp" />



        <Button
            android:id="@+id/send_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/brown"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:text="@string/send"
            android:textColor="@color/beige" />

    </LinearLayout>




</RelativeLayout>