<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige">

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_toLeftOf="@+id/close"
        android:layout_alignParentStart="true"
        android:id="@+id/animal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/adopt"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_below="@+id/animal_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/owner_name"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/owner_email"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/owner_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/owner_phone"
                android:textColor="@color/brown"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/owner_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/brown"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <EditText
        android:id="@+id/messageText"
        android:hint="@string/leave_a_message_for_the_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/body" />



    <Button
        android:id="@+id/send_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageText"
        android:layout_centerHorizontal="true"
        android:background="@color/brown"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:text="@string/send_request_for_adoption"
        android:textColor="@color/beige" />


</RelativeLayout>